2013-04-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Prettier build buttons
	* [TASK] #47886: Log everything during install

2013-04-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #47659: Create a Makefile
	* [FEATURE] #47647: Colorize console output

2013-04-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #47655: Hide obsolete versions of Sphinx
	* [TASK] Wrap long lines in console output
	* [TASK] Let build output be linked in a new browser window
	* [!!!][TASK] Use namespaces

2013-04-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 0.2.0
	* [TASK] Install PyYAML to compile TYPO3 documentation
	* [TASK] Add samples of cross-link references
	* [FEATURE] Allow TYPO3 documentation to be created with proper directory structure
	* [TASK] Use platform-dependent directory separator

2013-04-23  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] .rst and .py files should be treated as text files

2013-04-21  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add button to generate LaTeX output
	* [TASK] Generate complete conf.py

2013-04-19  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 0.1.0
	* [TASK] Use external template files for blank project
	* [BUGFIX] #47380: Downloading RestTools fails with curl (thanks to Philipp Gampe)
	* [FEATURE] #47378: Support official documentation (thanks to Philipp Gampe)
	* [BUGFIX] #47376: Wrong usage of t3lib_div::mkdir_deep() (thanks to Francois Suter)
	* [TASK] Wizard to kickstart a new Sphinx project
	* [TASK] Install official TYPO3 ReStructuredText Tools provided by the Documentation Team

2013-04-18  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Extension documentation
	* [!!!][TASK] FAL-compatibility: extension requires TYPO3 6.x
	* [TASK] Backend module (File > Sphinx Console) to compile documentation

2013-04-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add support for JSON and check of links
	* [TASK] Add Sphinx-Builder service (HTML)